# rag-demo

./: .gitignore  render.yaml  tatus  test.py  test_instructions.txt
Navid-RAG-ARC/: .dockerignore  .profile  Procfile  README.md  README_render.md  celery_app.py  docker-compose.yml  main.py  main_render.py  milvus.conf  navid-fastapi.conf  nginx.conf  pyproject.toml  render.yaml  render_startup.sh  requirements.txt  sql_app.db  start.bat  start_worker.bat  startup.sh  test.db
Navid-RAG-ARC/apps/admin/: routes.py
Navid-RAG-ARC/apps/auth/: models.py  routes.py  schemas.py  services.py  utils.py
Navid-RAG-ARC/apps/chat/: models.py  routes.py  schemas.py  utils.py
Navid-RAG-ARC/apps/organizations/: models.py  routes.py  schemas.py
Navid-RAG-ARC/apps/rag/: models.py  routes.py  schemas.py  services.py
Navid-RAG-ARC/apps/test/: routes.py
Navid-RAG-ARC/apps/users/: models.py  routes.py  schemas.py
Navid-RAG-ARC/core/: config.py  db.py  errors.py  logger.py  middleware.py  settings.py  startup.py
Navid-RAG-ARC/core/celery/: __init__.py  config.py
Navid-RAG-ARC/core/chunking/: __init__.py  chunk_processor.py  contextual_chunker.py  semantic_chunker.py
Navid-RAG-ARC/core/db/: config.py
Navid-RAG-ARC/core/events/: websocket.py
Navid-RAG-ARC/core/language/: arabic_utils.py
Navid-RAG-ARC/core/llm/: base.py  factory.py  prompt_templates.py
Navid-RAG-ARC/core/quality/: response_analyzer.py
Navid-RAG-ARC/core/queue/: manager.py
Navid-RAG-ARC/scripts/: check_collection.py  reset_db.py  reset_vector_store.py
Navid-RAG-ARC/tools/: models_test.py
(+86 files in other folders)
