[project]
name = "navid-rag"
version = "0.1.0"
description = "A modern state of the art Arabic LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "arabic-reshaper>=3.0.0",
    "docx2txt>=0.8",
    "faiss-cpu>=1.10.0",
    "fastapi[all]>=0.115.8",
    "langchain-chroma>=0.2.2",
    "langchain-cohere>=0.4.2",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.37",
    "langchain-huggingface>=0.1.2",
    "langchain-milvus>=0.1.8",
    "langchain[openai]>=0.3.19",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "pymilvus>=2.5.4",
    "pymupdf>=1.25.3",
    "python-bidi>=0.6.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.22",
]
